Ignore .pb file and delete pyc file

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 *.pyc
 /api-key.txt
 /download_file_types/__pycache__/
+/download_file_types/download_file_types.pb
 /download_file_types/download_file_types.proto
 /download_file_types/download_file_types_pb2.py
